k8s/login-consent/kustomize/login-consent/overlays/local/login-consent/add-ca.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-consent
spec:
  template:
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: login-consent-ca-cert
      containers:
        - name: login-consent
          volumeMounts:
            - name: ca-cert
              mountPath: /etc/login-consent/tls
