k8s/login-consent/kustomize/login-consent/overlays/local/login-consent/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-consent
  labels:
    app: login-consent
spec:
  tls:
  - hosts:
      - LOGIN_CONSENT_SERVICE_NAME.||DOMAIN||
    secretName: INGRESS_TLS_SECRET
  rules:
  - host: LOGIN_CONSENT_SERVICE_NAME.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: LOGIN_CONSENT_SERVICE_NAME
            port:
              name: http
